Primeira parte da criação do módulo Reserva

--- a/ClubeDoLivroConsoleApp/ClubeDoLivroConsoleApp.csproj
+++ b/ClubeDoLivroConsoleApp/ClubeDoLivroConsoleApp.csproj
@@ -11,4 +11,8 @@
     <None Remove="ModuloCaixas\RepositorioCaixa.cs~RFd11f08.TMP" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ModuloMultas\" />
+  </ItemGroup>
+
 </Project>
